--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="logo2.ico" type="image/x-icon">
     <title>andres</title>
 </head>
+<header>
+    <img src="logo2.png" alt="Logo morcilla">
+</header>
 <body>
     <h1>
       Hola, buenas tardes.
