--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo2.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
     <title>andres</title>
 </head>
 <header>
