--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="logo2.png" alt="Logo morcilla">
 </header>
 <body>
-    <h1>
+    <h1 class="titulo">
       Hola, buenas tardes.
     </h1>
 </body>
