--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <title>andres</title>
 </head>
-<header>
+<header class="he">
     <img src="logo2.png" alt="Logo morcilla">
 </header>
-<body>
+<body class="cue">
     <h1 class="titulo">
       Hola, buenas tardes.
     </h1>
