--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <h1 class="titulo">
       Hola, buenas tardes.
     </h1>
+    <btn href="texto">
+        entrar a texto
+    </btn>
 </body>
 </html>
