--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <img src="logo2.png" alt="Logo morcilla">
 </header>
 <body class="cue">
-    <h1 class="titulo">
+    <h1 class="titulo" href="texto">
       Hola, buenas tardes.
     </h1>
-    <btn href="texto">
-        entrar a texto
-    </btn>
 </body>
 </html>
