--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="logo2.png" alt="Logo morcilla">
 </header>
 <body class="cue">
-    <h1 class="titulo" href="texto.txt">
+    <h1 class="titulo" href="texto.html">
       Hola, buenas tardes.
     </h1>
 </body>
