--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="styles.css">
     <title>andres</title>
 </head>
-<header class="he">
-    <img src="logo2.png" alt="Logo morcilla">
-</header>
 <body class="cue">
-    <h1 class="titulo" href="texto.html">
-      Hola, buenas tardes.
+    <img src="logo2.png" alt="Logo de una super morcilla.">
+    <h1 class="titulo">
+      ELEMENTOS DE LA TP (tabla periodica)
     </h1>
+    <h2>
+        Algunos elementos de ejemplo:
+    </h2>
+    <ol>
+        <il>H --> hidrogeno</il>
+        <il>He --> helio</il>
+        <il>Be --> berilio</il>
+        <il>P --> fosforo</il>
+        <il>C --> carbono</il>
+    </ol>
 </body>
 </html>
