--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="logo2.ico" type="image/x-icon">
+    <link rel="icon" href="logo/logo2.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>andres</title>
 </head>
 <body class="cue">
-    <img src="logo2.png" alt="Logo de una super morcilla.">
+    <img src="logo/logo2.png" alt="Logo de una super morcilla.">
     <h1 class="titulo">
       ELEMENTOS DE LA TP (tabla periodica)
     </h1>
     <h2>
         Algunos elementos de ejemplo:
     </h2>
-    <ol>
+    <ol class="superlista">
         <il>H --> hidrogeno</il>
         <il>He --> helio</il>
         <il>Be --> berilio</il>
