--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>
         Algunos elementos de ejemplo:
     </h2>
-    <ol class="superlista">
+    <ol class="superlista" type="a">
         <il>H --> hidrogeno</il>
         <il>He --> helio</il>
         <il>Be --> berilio</il>
