--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         Algunos elementos de ejemplo:
     </h2>
     <ol class="superlista" type="a">
-        <il>H --> hidrogeno</il>
-        <il>He --> helio</il>
-        <il>Be --> berilio</il>
-        <il>P --> fosforo</il>
-        <il>C --> carbono</il>
+        <li>H --> hidrogeno</li>
+        <li>He --> helio</li>
+        <li>Be --> berilio</li>
+        <li>P --> fosforo</li>
+        <li>C --> carbono</li>
     </ol>
 </body>
 </html>
